--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@google/genai": "^1.43.0",
     "cheerio": "^1.2.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
     "next": "^16.1.6",
+    "next-themes": "^0.4.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwind-merge": "^3.5.0"
